# GoldenRatioNS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
Tests/: fi_base_test.py  fi_degree_test.py  golden_number_test.py  normalization_test.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/Components/: purpleBlock.tsx
frontend/src/Utils/: Converter.ts
lib/Tests/: fi_base_test.py  fi_degree_test.py  golden_number_test.py  normalization_test.py
lib/scripts/: build.sh  clean.sh  help.sh  install.sh  test.sh
lib/src/goldenratio/: __init__.py
lib/src/goldenratio/Utils/: __init__.py  fi_base.py  fi_degree.py
scripts/: publish.sh
src/Logos/: __init__.py  golden_number.py  main.py
src/Utils/: __init__.py  fi_degree.py  normalization.py
src/goldenratio/: __init__.py
src/goldenratio/Logos/: __init__.py  fi_arithmetic.py  golden_number.py
src/goldenratio/Utils/: __init__.py  fi_base.py  normalization.py
