[project]
name = "golden-ration-ns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yana", email = "anaermakova948@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
