[project]
name = "golden-ration-ns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yana", email = "anaermakova948@gmail.com" },
    {name ="Dima",email = "babygreenyoda@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "mypy>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]