[project]
name = "golden-ration-ns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yana", email = "anaermakova948@gmail.com" },
    {name ="Dima",email = "babygreenyoda@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldenratio"] 

[tool.pytest.ini_options]
pythonpath = ["src"]
